drivers/gpu/drm/i915/i915_drv.h
@@ -586,6 +586,8 @@ struct intel_fbc {
 	} work;
 
 	const char *no_fbc_reason;
+
+	bool cfb_try_resize;
 };
 
 /*
